<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txvAitValido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblEditDtMod" />

    <EditText
        android:id="@+id/edDataModificada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:ems="10"
        android:inputType="date" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txvnrimagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblEditHrMod" />

    <EditText
        android:id="@+id/edHoraModificada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="8"
         android:inputType="time" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.13"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/btSalvarDtHrMod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblSalvar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.80"
        android:orientation="vertical" >


    </LinearLayout>

</LinearLayout>